k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nebula
  labels:
    app: nebula
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nebula
